[gd_scene load_steps=19 format=3 uid="uid://bysj3d8bi03f3"]

[ext_resource type="Script" path="res://Game.gd" id="1_mv8fg"]
[ext_resource type="Script" path="res://WorldControl.gd" id="2_4xnv1"]
[ext_resource type="Texture2D" uid="uid://dpw2ydh53y6pa" path="res://Assets/Background/CityScapeParallax_Layer4.png" id="2_aqrel"]
[ext_resource type="Script" path="res://ParallaxBackground.gd" id="2_u6okd"]
[ext_resource type="Texture2D" uid="uid://ch0gh7u885sk0" path="res://Assets/Background/CityScapeParallax_Layer3.png" id="3_e7b12"]
[ext_resource type="Texture2D" uid="uid://blchys1e6ge6k" path="res://Assets/Background/CityScapeParallax_Layer2.png" id="4_jbide"]
[ext_resource type="PackedScene" uid="uid://bk3arvvm1m2w5" path="res://passenger.tscn" id="4_slanw"]
[ext_resource type="Script" path="res://SeatsHContainer.gd" id="5_3c8ts"]
[ext_resource type="Texture2D" uid="uid://hu8mwljn0qv3" path="res://Assets/Background/CityScapeParallax_Layer1.png" id="5_nvbgo"]
[ext_resource type="Texture2D" uid="uid://bo4njjrwujl52" path="res://Assets/station.png" id="7_m3dno"]
[ext_resource type="Texture2D" uid="uid://bb16wnpyvin78" path="res://Assets/Jeepney/body.png" id="8_0r8s6"]
[ext_resource type="FontFile" uid="uid://cqc3sov6sv3ul" path="res://Assets/Fonts/Cubao_Free_Regular.otf" id="11_5gbt3"]
[ext_resource type="FontFile" uid="uid://l0heglvifqok" path="res://Assets/Fonts/BadComic-Regular.ttf" id="11_soau4"]
[ext_resource type="Texture2D" uid="uid://c3ib12xs5m0wc" path="res://Assets/Icons/TitleSplash.png" id="12_ywgnw"]
[ext_resource type="AudioStream" uid="uid://em3jo0gmd8wh" path="res://Assets/Sounds/beep.mp3" id="15_5unuc"]
[ext_resource type="AudioStream" uid="uid://f2x7lc55sj04" path="res://Assets/Sounds/ambiance.wav" id="16_8jt67"]

[sub_resource type="Gradient" id="Gradient_ohnid"]
colors = PackedColorArray(1, 1, 1, 1, 0.18, 0.699333, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_50y2x"]
gradient = SubResource("Gradient_ohnid")

[node name="World" type="CanvasLayer"]
script = ExtResource("1_mv8fg")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_u6okd")

[node name="Layer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Polygon2D" type="Polygon2D" parent="ParallaxBackground/Layer5"]
position = Vector2(110, 662)
rotation = -1.56755
scale = Vector2(0.657156, 1.38561)
texture = SubResource("GradientTexture1D_50y2x")
polygon = PackedVector2Array(-101, 840, 1270, 840, 1262, -114, -103, -116)
uv = PackedVector2Array(-27.5363, 842.029, 249.275, 839.13, 260.87, -115.942, 5.79712, -108.696)

[node name="Layer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.12, 0.12)
motion_mirroring = Vector2(2304, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Layer4"]
position = Vector2(576, 324)
scale = Vector2(0.45, 0.45)
texture = ExtResource("2_aqrel")

[node name="Layer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.25, 0.25)
motion_mirroring = Vector2(2304, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Layer3"]
position = Vector2(576, 324)
scale = Vector2(0.45, 0.45)
texture = ExtResource("3_e7b12")

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(2304, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Layer2"]
position = Vector2(576, 324)
scale = Vector2(0.45, 0.45)
texture = ExtResource("4_jbide")

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(2304, 0)

[node name="Road" type="Sprite2D" parent="ParallaxBackground/Layer1"]
position = Vector2(576, 324)
scale = Vector2(0.45, 0.45)
texture = ExtResource("5_nvbgo")

[node name="Station" type="Sprite2D" parent="."]
position = Vector2(450, 368)
scale = Vector2(0.436113, 0.436113)
texture = ExtResource("7_m3dno")

[node name="Jeepney" type="Sprite2D" parent="."]
position = Vector2(854, 430.125)
scale = Vector2(0.300835, 0.300835)
texture = ExtResource("8_0r8s6")
flip_h = true

[node name="WorldControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("2_4xnv1")

[node name="Passengers" type="Marker2D" parent="WorldControl"]
position = Vector2(624, 443.433)

[node name="Passenger" parent="WorldControl/Passengers" instance=ExtResource("4_slanw")]
visible = false

[node name="Passenger2" parent="WorldControl/Passengers" instance=ExtResource("4_slanw")]
visible = false
position = Vector2(-79, 0)

[node name="Passenger3" parent="WorldControl/Passengers" instance=ExtResource("4_slanw")]
visible = false
position = Vector2(-160, 0)

[node name="Passenger4" parent="WorldControl/Passengers" instance=ExtResource("4_slanw")]
visible = false
position = Vector2(-244, 0)

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOver/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="GameOverLabel" type="Label" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("11_5gbt3")
theme_override_font_sizes/font_size = 40
text = "GAME OVER"
horizontal_alignment = 1

[node name="GameOverScoreLabel" type="Label" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("11_5gbt3")
theme_override_font_sizes/font_size = 30
text = "Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart
"

[node name="QuitButton" type="Button" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="TitleSplash" type="Sprite2D" parent="MainMenu"]
position = Vector2(844, 210)
scale = Vector2(0.257701, 0.26048)
texture = ExtResource("12_ywgnw")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -58.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 260

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="TitleLabel" type="Label" parent="MainMenu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_5gbt3")
theme_override_font_sizes/font_size = 100
text = "IKOT"

[node name="StartGame" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("11_5gbt3")
theme_override_font_sizes/font_size = 30
text = "START"

[node name="Interface" type="CanvasLayer" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="Interface"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_bottom = 26.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Interface/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("11_5gbt3")
text = "Score: "

[node name="ScoreValueLabel" type="Label" parent="Interface/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("11_5gbt3")
text = "0"

[node name="QuotaLabel" type="Label" parent="Interface/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("11_5gbt3")
text = "Quota: "

[node name="STQLabel" type="Label" parent="Interface/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("11_5gbt3")
text = "Stations till Quota: "

[node name="MarginContainer3" type="MarginContainer" parent="Interface"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -111.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 80

[node name="Button" type="Button" parent="Interface/MarginContainer3"]
layout_mode = 2
text = "Next Station"

[node name="MarginContainer2" type="MarginContainer" parent="Interface"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 10

[node name="SeatsHContainer" type="HBoxContainer" parent="Interface/MarginContainer2"]
layout_mode = 2
alignment = 1
script = ExtResource("5_3c8ts")

[node name="L" type="Label" parent="Interface/MarginContainer2/SeatsHContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_soau4")
text = "L"

[node name="LeftSeats" type="HBoxContainer" parent="Interface/MarginContainer2/SeatsHContainer"]
layout_mode = 2
alignment = 1

[node name="R" type="Label" parent="Interface/MarginContainer2/SeatsHContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_soau4")
text = "R"

[node name="RightSeats" type="HBoxContainer" parent="Interface/MarginContainer2/SeatsHContainer"]
layout_mode = 2
alignment = 1

[node name="F" type="Label" parent="Interface/MarginContainer2/SeatsHContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_soau4")
text = "F"

[node name="FrontSeats" type="HBoxContainer" parent="Interface/MarginContainer2/SeatsHContainer"]
layout_mode = 2
alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="Beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_5unuc")

[node name="AmbientSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_8jt67")
autoplay = true

[connection signal="pressed" from="GameOver/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOver/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/StartGame" to="ParallaxBackground" method="_on_start_game_pressed"]
[connection signal="pressed" from="Interface/MarginContainer3/Button" to="." method="_on_button_pressed"]
